Bug fix f/src/c/hoverText.css: Changed z-index of hover text from 1000 to 0 to prevent it from affecting the form modal buttons.

--- a/f/src/c/hoverText.css
+++ b/f/src/c/hoverText.css
@@ -7,7 +7,7 @@ div.hover-text {
     padding: '5px';
     border-radius: '3px';
     white-space: 'nowrap';
-    z-index: 1000;
+    z-index: 0;
     overflow: hidden;
     height:48px;
     text-overflow: ellipsis;
